--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,11 +1,14 @@
 plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
+    id 'kotlin-kapt'
 }
 
 android {
     compileSdk rootProject.compileSdkVersion
-
+    buildFeatures {
+        dataBinding true
+    }
     defaultConfig {
         applicationId "cn.goodjobs.client.dev"
         minSdk rootProject.minSdkVersion
@@ -21,8 +24,8 @@ android {
         }
     }
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_16
-        targetCompatibility JavaVersion.VERSION_16
+        sourceCompatibility JavaVersion.VERSION_17
+        targetCompatibility JavaVersion.VERSION_17
     }
     kotlinOptions {
         jvmTarget = '17'
@@ -30,39 +33,6 @@ android {
 }
 
 dependencies {
-
-    //ktx核心
-    implementation 'androidx.core:core-ktx:1.7.0'
-    //activity-ktx
-    implementation 'androidx.activity:activity-ktx:1.4.0'
-    //fragment-ktx
-    implementation 'androidx.fragment:fragment-ktx:1.4.1'
-    //lifecycle-ktx
-    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.5.0-beta01'
-    //material
-//    implementation 'com.google.android.material:material:1.5.0'
-
-    //lifecycle-ktx
-    implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.5.0-beta01'
-
-    //viewmodel-ktx
-    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.5.0-beta01'
-
-    //列表
-    implementation 'androidx.recyclerview:recyclerview:1.2.1'
-    //分页
-    implementation 'androidx.paging:paging-runtime:3.1.1'
-    implementation 'androidx.paging:paging-rxjava3:3.1.1'
-
-    //viewpager2
-    implementation 'androidx.viewpager2:viewpager2:1.0.0'
-
-    //Navigation
-    implementation 'androidx.navigation:navigation-fragment-ktx:2.4.2'
-    implementation 'androidx.navigation:navigation-ui-ktx:2.4.2'
-
-    //约束布局
-    implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
 
     //statusBar
     // 基础依赖包，必须要依赖
@@ -77,6 +47,5 @@ dependencies {
     implementation 'androidx.datastore:datastore:1.0.0'
     implementation 'androidx.datastore:datastore-rxjava3:1.0.0'
 
-    //Glide
-    implementation 'com.github.bumptech.glide:glide:4.13.1'
+    implementation project(path: ':BaseActivity')
 }
