--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,6 +5,7 @@
     <uses-permission android:name="android.permission.INTERNET"/>
 
     <application
+        android:name=".App"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -22,7 +23,7 @@
 
         <!--App页面-->
         <activity
-            android:name=".MainActivity"
+            android:name="cn.goodjobs.client.MainActivity"
             android:exported="true" >
 
             <intent-filter>
@@ -30,7 +31,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".view.launcher.LauncherActivity"
+        <activity android:name="cn.goodjobs.client.view.launcher.LauncherActivity"
             android:exported="true"
             android:theme="@style/FullScreenTheme">
 
