--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,7 +10,7 @@ android {
         dataBinding true
     }
     defaultConfig {
-        applicationId "cn.goodjobs.client.dev"
+        applicationId "com.wpf.app.quick"
         minSdk rootProject.minSdkVersion
         targetSdk rootProject.targetSdkVersion
         versionCode 1
@@ -35,7 +35,6 @@ android {
 dependencies {
 
     //statusBar
-    // 基础依赖包，必须要依赖
     implementation 'com.geyifeng.immersionbar:immersionbar:3.2.2'
     // kotlin扩展（可选）
     implementation 'com.geyifeng.immersionbar:immersionbar-ktx:3.2.2'
