--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="cn.goodjobs.client">
+    package="com.wpf.app.quick">
 
     <uses-permission android:name="android.permission.INTERNET"/>
 
@@ -11,7 +11,7 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.GoodJobs2022">
+        android:theme="@style/Theme.Quick">
         <!--适配华为（huawei）刘海屏-->
         <meta-data
             android:name="android.notch_support"
@@ -23,7 +23,7 @@
 
         <!--App页面-->
         <activity
-            android:name="cn.goodjobs.client.MainActivity"
+            android:name=".MainActivity"
             android:exported="true" >
 
             <intent-filter>
@@ -31,7 +31,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name="cn.goodjobs.client.view.launcher.LauncherActivity"
+        <activity android:name=".LauncherActivity"
             android:exported="true"
             android:theme="@style/FullScreenTheme">
 
