1.上传代码到jitpack。

--- a/BaseActivity/build.gradle
+++ b/BaseActivity/build.gradle
@@ -12,7 +12,8 @@ android {
     defaultConfig {
         minSdk rootProject.minSdkVersion
         targetSdk rootProject.targetSdkVersion
-
+        versionCode 1
+        versionName "1.0"
         consumerProguardFiles "consumer-rules.pro"
     }
 
