--- a/BaseActivity/build.gradle
+++ b/BaseActivity/build.gradle
@@ -12,8 +12,6 @@ android {
     defaultConfig {
         minSdk rootProject.minSdkVersion
         targetSdk rootProject.targetSdkVersion
-        versionCode 1
-        versionName "1.0"
         consumerProguardFiles "consumer-rules.pro"
     }
 
@@ -27,44 +25,31 @@ android {
 
 dependencies {
     //ktx核心
-    api 'androidx.core:core-ktx:1.7.0'
+    implementation 'androidx.core:core-ktx:1.7.0'
     //activity-ktx
-    api 'androidx.activity:activity-ktx:1.4.0'
+    implementation 'androidx.activity:activity-ktx:1.4.0'
+    implementation 'androidx.appcompat:appcompat:1.4.2'
     //fragment-ktx
-    api 'androidx.fragment:fragment-ktx:1.4.1'
+    implementation 'androidx.fragment:fragment-ktx:1.4.1'
     //material
 //    implementation 'com.google.android.material:material:1.5.0'
     //lifecycle-ktx
-    api 'androidx.lifecycle:lifecycle-runtime-ktx:2.5.0-beta01'
+    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.5.0-beta01'
     //lifecycle-ktx
-    api 'androidx.lifecycle:lifecycle-livedata-ktx:2.5.0-beta01'
+    implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.5.0-beta01'
 
     //viewmodel-ktx
-    api 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.5.0-beta01'
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.5.0-beta01'
 
     //约束布局
-    api 'androidx.constraintlayout:constraintlayout:2.1.3'
+    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
 
     //列表
-    api 'androidx.recyclerview:recyclerview:1.2.1'
-    //分页
-    api 'androidx.paging:paging-runtime:3.1.1'
-    api 'androidx.paging:paging-rxjava3:3.1.1'
-
-    //viewpager2
-    api 'androidx.viewpager2:viewpager2:1.0.0'
-
-    //Navigation
-    api 'androidx.navigation:navigation-fragment-ktx:2.4.2'
-    api 'androidx.navigation:navigation-ui-ktx:2.4.2'
+    implementation 'androidx.recyclerview:recyclerview:1.2.1'
+    implementation 'jp.wasabeef:recyclerview-animators:4.0.2'
 
     //Glide
-    api 'com.github.bumptech.glide:glide:4.13.1'
-
-    //retrofit2-okhttp-gson
-    api 'com.squareup.retrofit2:retrofit:2.9.0'
-    api 'com.squareup.okhttp3:okhttp:4.9.3'
-    api 'com.google.code.gson:gson:2.9.0'
+    implementation 'com.github.bumptech.glide:glide:4.13.1'
 
     //kotlin注解
     implementation 'org.jetbrains.kotlin:kotlin-reflect:1.6.21'
