--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,20 +33,52 @@ android {
 }
 
 dependencies {
+    //ktx核心
+    implementation 'androidx.core:core-ktx:1.7.0'
+    //activity-ktx
+    implementation 'androidx.activity:activity-ktx:1.4.0'
+    implementation 'androidx.appcompat:appcompat:1.4.2'
+
+    //lifecycle-ktx
+    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.5.0-beta01'
+    //lifecycle-ktx
+    implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.5.0-beta01'
+
+    //viewmodel-ktx
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.5.0-beta01'
 
     //statusBar
     implementation 'com.geyifeng.immersionbar:immersionbar:3.2.2'
     // kotlin扩展（可选）
     implementation 'com.geyifeng.immersionbar:immersionbar-ktx:3.2.2'
-    // fragment快速实现（可选）已废弃
-    implementation 'com.geyifeng.immersionbar:immersionbar-components:3.2.2'
+
+    //列表
+    implementation 'androidx.recyclerview:recyclerview:1.2.1'
+    implementation 'jp.wasabeef:recyclerview-animators:4.0.2'
+
+    //分页
+    implementation 'androidx.paging:paging-runtime:3.1.1'
+    implementation 'androidx.paging:paging-rxjava3:3.1.1'
+
+    //viewpager2
+    implementation 'androidx.viewpager2:viewpager2:1.0.0'
+
+    //Navigation
+    implementation 'androidx.navigation:navigation-fragment-ktx:2.4.2'
+    implementation 'androidx.navigation:navigation-ui-ktx:2.4.2'
+
+    //retrofit2-okhttp-gson
+    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+    implementation 'com.squareup.okhttp3:okhttp:4.9.3'
+    implementation 'com.google.code.gson:gson:2.9.0'
 
     //Sp存储
     implementation 'androidx.preference:preference-ktx:1.2.0'
     implementation 'androidx.datastore:datastore:1.0.0'
     implementation 'androidx.datastore:datastore-rxjava3:1.0.0'
 
-    implementation 'jp.wasabeef:recyclerview-animators:4.0.2'
+    //约束布局
+    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
 
     implementation project(path: ':BaseActivity')
 }
