--- a/gradle.properties
+++ b/gradle.properties
@@ -25,7 +25,7 @@ android.nonTransitiveRClass=true
 
 #android.disableAutomaticComponentCreation=true
 
-IS_REMOTE=false
+IS_REMOTE=true
 IS_ONLY_PLUGIN=false
 GROUP=com.wpf.app.quick
 VERSION_NAME=0.3.0
