--- a/app/build.gradle
+++ b/app/build.gradle
@@ -17,9 +17,24 @@ android {
         multiDexEnabled = true
     }
 
+    signingConfigs {
+        release {
+            storeFile file("../QuickRelease.jks")
+            storePassword "walgr1010"
+            keyAlias "quick"
+            keyPassword "walgr1010"
+            v1SigningEnabled true
+            v2SigningEnabled true
+        }
+    }
     buildTypes {
         release {
-            minifyEnabled false
+            minifyEnabled true
+            //Zipalign优化
+            zipAlignEnabled true
+            // 移除无用的resource文件
+            shrinkResources true
+            signingConfig signingConfigs.release
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
